--- a/build.yaml
+++ b/build.yaml
@@ -19,8 +19,6 @@
 ---
 include:
   - board: nice_nano_v2
-    shield: corne_left
-    snippet: studio-rpc-usb-uart
-    cmake-args: -DCONFIG_ZMK_STUDIO=y
+    shield: corne_left nice_oled
   - board: nice_nano_v2
-    shield: corne_right
+    shield: corne_right nice_oled
