--- a/build.yaml
+++ b/build.yaml
@@ -18,7 +18,11 @@
 #
 ---
 include:
+  - board: nice_nano
+    shield: corne_left
+  - board: nice_nano
+    shield: corne_right
   - board: nice_nano_v2
-    shield: corne_left nice_oled
+    shield: lily58_left
   - board: nice_nano_v2
-    shield: corne_right nice_oled
+    shield: lily58_right
