--- a/build.yaml
+++ b/build.yaml
@@ -19,10 +19,6 @@
 ---
 include:
   - board: nice_nano
-    shield: corne_left
+    shield: cradio_left
   - board: nice_nano
-    shield: corne_right
-  - board: nice_nano_v2
-    shield: lily58_left
-  - board: nice_nano_v2
-    shield: lily58_right
+    shield: cradio_right
