--- a/build.yaml
+++ b/build.yaml
@@ -18,7 +18,7 @@
 #
 ---
 include:
-  - board: nice_nano
-    shield: cradio_left
-  - board: nice_nano
-    shield: cradio_right
+  - board: nice_nano_v2
+    shield: corne_left
+  - board: nice_nano_v2
+    shield: corne_right
