--- a/build.yaml
+++ b/build.yaml
@@ -1,24 +1,11 @@
-# This file generates the GitHub Actions matrix.
-# For simple board + shield combinations, add them to the top level board and
-# shield arrays, for more control, add individual board + shield combinations
-# to the `include` property. You can also use the `cmake-args` property to
-# pass flags to the build command and `artifact-name` to assign a name to
-# distinguish build outputs from each other:
-#
-# board: [ "nice_nano_v2" ]
-# shield: [ "corne_left", "corne_right" ]
-# include:
-#   - board: bdn9_rev2
-#   - board: nice_nano_v2
-#     shield: reviung41
-#   - board: nice_nano_v2
-#     shield: corne_left
-#     cmake-args: -DCONFIG_ZMK_USB_LOGGING=y
-#     artifact-name: corne_left_with_logging
-#
----
-include:
-  - board: nice_nano
-    shield: cradio_left
-  - board: nice_nano
-    shield: cradio_right
+  ### CORNE START ###
+    ### nice_view START ###
+    # nice_nano_v2 + nice_epaper
+  - board: nice_nano_v2
+    shield: corne_left nice_view_adapter nice_epaper
+    cmake-args: -DCONFIG_ZMK_KEYBOARD_NAME=\"Nice_Corne_View\"
+    artifact-name: nice_corne_left_view
+    snippet: studio-rpc-usb-uart
+  - board: nice_nano_v2
+    shield: corne_right nice_view_adapter nice_epaper
+    artifact-name: nice_corne_right_view
