--- a/build.yaml
+++ b/build.yaml
@@ -1,11 +1,31 @@
-  ### CORNE START ###
-    ### nice_view START ###
-    # nice_nano_v2 + nice_epaper
+    ### nice_oled START ###
+    # nice_nano_v2 + nice_oled
   - board: nice_nano_v2
-    shield: corne_left nice_view_adapter nice_epaper
-    cmake-args: -DCONFIG_ZMK_KEYBOARD_NAME=\"Nice_Corne_View\"
-    artifact-name: nice_corne_left_view
+    shield: corne_left nice_oled
+    cmake-args: -DCONFIG_ZMK_KEYBOARD_NAME=\"Nice_Corne_Oled\"
+    artifact-name: nice_corne_left_oled
     snippet: studio-rpc-usb-uart
   - board: nice_nano_v2
-    shield: corne_right nice_view_adapter nice_epaper
-    artifact-name: nice_corne_right_view
+    shield: corne_right nice_oled
+    artifact-name: nice_corne_right_oled
+
+    # puchi_ble_v1 + nice_oled
+  - board: puchi_ble_v1
+    shield: corne_left nice_oled
+    cmake-args: -DCONFIG_ZMK_KEYBOARD_NAME=\"Puchi_Corne_O\"
+    artifact-name: puchi_corne_left_oled
+    snippet: studio-rpc-usb-uart
+  - board: puchi_ble_v1
+    shield: corne_right nice_oled
+    artifact-name: puchi_corne_right_oled
+
+    # peripheral_left + nice_nano_v2 + nice_oled
+  - board: nice_nano_v2
+    shield: corne_left_peripheral nice_oled
+    artifact-name: nice_corne_left_peripheral_oled
+
+    # peripheral_left + puchi_ble_v1 + nice_oled
+  - board: puchi_ble_v1
+    shield: corne_left_peripheral nice_oled
+    artifact-name: puchi_corne_left_peripheral_oled
+    ### nice_oled END ###
