--- a/build.yaml
+++ b/build.yaml
@@ -1,28 +1,9 @@
-# ========================================
-# FileName: build.yaml
-# Date: 07.06.2023
-# Author: Marcos Chow Castro
-# Email: mctechnology170318@gmail.com
-# GitHub: https://github.com/mctechnology17
-# Brief: configuration file for ZMK firmware
-# Board: nice_nano_v2 and puchi_ble_v1
-# shield: corne_left nice_view_adapter nice_view,
-#         corne_right nice_view_adapter nice_view,
-#         corne_left, corne_right and settings_reset
-# =========================================
-#                              ╔═╦═╦═╗
-#                       ╔════╗ ║║║║║╔╝
-#                       ║╔╗╔╗║ ║║║║║╚╗
-#                       ╚╝║║╚╝ ║╠═╩╩═╝
-#                         ║╠═╦═╣╚╦═╦╦═╦╗╔═╦═╦╦╗
-#                         ║║╩╣═╣║║║║║╬║╚╣╬║╬║║║
-#                         ╚╩═╩═╩╩╩╩═╩═╩═╩═╬╗╠╗║
-#                                         ╚═╩═╝
-# This file generates the GitHub Actions matrix
-# For simple board + shield combinations, add them
-# to the top level board and shield arrays, for more
-# control, add individual board + shield combinations to
-# the `include` property, e.g:
+# This file generates the GitHub Actions matrix.
+# For simple board + shield combinations, add them to the top level board and
+# shield arrays, for more control, add individual board + shield combinations
+# to the `include` property. You can also use the `cmake-args` property to
+# pass flags to the build command and `artifact-name` to assign a name to
+# distinguish build outputs from each other:
 #
 # board: [ "nice_nano_v2" ]
 # shield: [ "corne_left", "corne_right" ]
@@ -30,56 +11,14 @@
 #   - board: bdn9_rev2
 #   - board: nice_nano_v2
 #     shield: reviung41
-#
-# Split Keyboard Halves Unable to Pair
-#     https://zmk.dev/docs/troubleshooting
 #   - board: nice_nano_v2
-#     shield: settings_reset
-# Reset Split Keyboard Procedure
-# Perform the following steps to reset both halves of your split keyboard:
-# - Put each half of the split keyboard into bootloader mode.
-# - Flash one of the halves of the split with the downloaded settings reset UF2
-# image. Immediately after flashing the chosen half, put it into bootloader
-# mode to avoid accidental bonding between the halves.
-# - Repeat step 2 with the other half of the split keyboard.
-# - Flash the actual image for each half of the split keyboard (e.g
-# my_board_left.uf2 to the left half, my_board_right.uf2 to the right half).
+#     shield: corne_left
+#     cmake-args: -DCONFIG_ZMK_USB_LOGGING=y
+#     artifact-name: corne_left_with_logging
 #
-# After completing these steps, pair the halves of the split keyboard
-# together by resetting them at the same time. Most commonly, this is done by
-# grounding the reset pins for each of your keyboard's microcontrollers or
-# pressing the reset buttons at the same time.
-#
-# cmake-args: -DKEYMAP_FILE=../../config/other-corne.keymap -DCONFIG_ZMK_KEYBOARD_NAME=\"other-corne\" -DEXTRA_CONF_FILE=../../config/other-corne.conf
 ---
-    ### nice_oled START ###
-    # nice_nano_v2 + nice_oled
+include:
   - board: nice_nano_v2
-    shield: corne_left nice_oled
-    cmake-args: -DCONFIG_ZMK_KEYBOARD_NAME=\"Nice_Corne_Oled\"
-    artifact-name: nice_corne_left_oled
-    snippet: studio-rpc-usb-uart
+    shield: corne_left
   - board: nice_nano_v2
-    shield: corne_right nice_oled
-    artifact-name: nice_corne_right_oled
-
-    # puchi_ble_v1 + nice_oled
-  - board: puchi_ble_v1
-    shield: corne_left nice_oled
-    cmake-args: -DCONFIG_ZMK_KEYBOARD_NAME=\"Puchi_Corne_O\"
-    artifact-name: puchi_corne_left_oled
-    snippet: studio-rpc-usb-uart
-  - board: puchi_ble_v1
-    shield: corne_right nice_oled
-    artifact-name: puchi_corne_right_oled
-
-    # peripheral_left + nice_nano_v2 + nice_oled
-  - board: nice_nano_v2
-    shield: corne_left_peripheral nice_oled
-    artifact-name: nice_corne_left_peripheral_oled
-
-    # peripheral_left + puchi_ble_v1 + nice_oled
-  - board: puchi_ble_v1
-    shield: corne_left_peripheral nice_oled
-    artifact-name: puchi_corne_left_peripheral_oled
-    ### nice_oled END ###
+    shield: corne_right
