--- a/build.yaml
+++ b/build.yaml
@@ -4,7 +4,11 @@
 # to the `include` property. You can also use the `cmake-args` property to
 # pass flags to the build command and `artifact-name` to assign a name to
 # distinguish build outputs from each other:
-#
+#include:
+#  - board: nice_nano_v2
+ #   shield: corne_left
+#  - board: nice_nano_v2
+#    shield: corne_right
 # board: [ "nice_nano_v2" ]
 # shield: [ "corne_left", "corne_right" ]
 # include:
@@ -17,10 +21,9 @@
 #     artifact-name: corne_left_with_logging
 #
 ---
-include:
-  - board: nice_nano_v2
--   shield: lily58_left
-+   shield: lily58_left nice_view_adapter nice_view
-  - board: nice_nano_v2
--   shield: lily58_right
-+   shield: lily58_right nice_view_adapter nice_view
+ include:
+   - board: bdn9_rev2
+   - board: nice_nano_v2
+     shield: reviung41
+   - board: nice_nano_v2
+     shield: corne_left
