--- a/build.yaml
+++ b/build.yaml
@@ -21,9 +21,10 @@
 #     artifact-name: corne_left_with_logging
 #
 ---
- include:
-   - board: bdn9_rev2
-   - board: nice_nano_v2
-     shield: reviung41
-   - board: nice_nano_v2
-     shield: corne_left
+include:
+  - board: nice_nano_v2
+    shield: corne_left
+  - board: nice_nano_v2
+    shield: corne_right
+  - board: nice_nano_v2
+    shield: settings_reset
