--- a/build.yaml
+++ b/build.yaml
@@ -22,9 +22,11 @@
 #
 ---
 include:
-  - board: nice_nano_v2
+  - board: nice_nano
     shield: corne_left
-  - board: nice_nano_v2
+  - board: nice_nano
     shield: corne_right
   - board: nice_nano_v2
-    shield: settings_reset
+    shield: lily58_left
+  - board: nice_nano_v2
+    shield: lily58_right
